# services/backend/src/main/java/com/soprasteria/g4it/backend/apidigitalservice/controller/DigitalServiceController.java
@@ -9,12 +9,16 @@ package com.soprasteria.g4it.backend.apidigitalservice.controller;
 
 import com.soprasteria.g4it.backend.apidigitalservice.business.DigitalServiceService;
 import com.soprasteria.g4it.backend.apidigitalservice.mapper.DigitalServiceRestMapper;
+import com.soprasteria.g4it.backend.apidigitalservice.mapper.DigitalServiceVersionRestMapper;
 import com.soprasteria.g4it.backend.apidigitalservice.model.DigitalServiceBO;
+import com.soprasteria.g4it.backend.apidigitalservice.model.DigitalServiceVersionBO;
 import com.soprasteria.g4it.backend.apiuser.business.AuthService;
 import com.soprasteria.g4it.backend.common.utils.AuthorizationUtils;
 import com.soprasteria.g4it.backend.server.gen.api.DigitalServiceApiDelegate;
 import com.soprasteria.g4it.backend.server.gen.api.dto.DigitalServiceRest;
 import com.soprasteria.g4it.backend.server.gen.api.dto.DigitalServiceShareRest;
+import com.soprasteria.g4it.backend.server.gen.api.dto.DigitalServiceVersionRest;
+import com.soprasteria.g4it.backend.server.gen.api.dto.InDigitalServiceVersionRest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -45,6 +49,11 @@ public class DigitalServiceController implements DigitalServiceApiDelegate {
      */
     @Autowired
     private DigitalServiceRestMapper digitalServiceRestMapper;
+    /**
+     * DigitalServiceRest Mapper.
+     */
+    @Autowired
+    private DigitalServiceVersionRestMapper digitalServiceVersionRestMapper;
 
     @Autowired
     private AuthorizationUtils authorizationUtils;
@@ -62,6 +71,28 @@ public class DigitalServiceController implements DigitalServiceApiDelegate {
         final DigitalServiceBO digitalServiceBO = digitalServiceService.createDigitalService(workspace, authService.getUser().getId(), isAi);
         final DigitalServiceRest digitalServiceDTO = digitalServiceRestMapper.toDto(digitalServiceBO);
         return ResponseEntity.created(URI.create("/".concat(String.join("/", workspace.toString(), "digital-services", digitalServiceBO.getUid())))).body(digitalServiceDTO);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public ResponseEntity<DigitalServiceVersionRest> createDigitalServiceVersion(final String organization,
+                                                                                 final Long workspace,
+                                                                                 final InDigitalServiceVersionRest inDigitalServiceVersionRest) {
+        if (inDigitalServiceVersionRest.getIsAI() != null && inDigitalServiceVersionRest.getIsAI()) {
+            authorizationUtils.checkEcomindAuthorization();
+            authorizationUtils.checkEcomindEnabledForOrganization(organization);
+        }
+
+        final DigitalServiceVersionBO digitalServiceVersionBO = digitalServiceService.createDigitalServiceVersion(
+                workspace,
+                authService.getUser().getId(),
+                inDigitalServiceVersionRest
+        );
+
+        final DigitalServiceVersionRest digitalServiceVersionDTO = digitalServiceVersionRestMapper.toDto(digitalServiceVersionBO);
+        return ResponseEntity.created(URI.create("/".concat(String.join("/", workspace.toString(), "digital-service-version", digitalServiceVersionBO.getDsvUid())))).body(digitalServiceVersionDTO);
     }
 
     /**
