# services/backend/src/main/resources/swagger/greenit/components.yml
@@ -661,6 +661,48 @@ components:
           type: boolean
           description: The flag to enable data consistency view
 
+    DigitalServiceVersionRest:
+      description: Information of a Digital Service Version
+      type: object
+      properties:
+        uid:
+          type: string
+        name:
+          type: string
+        creationDate:
+          type: string
+          format: date-time
+        lastUpdateDate:
+          type: string
+          format: date-time
+        lastCalculationDate:
+          type: string
+          format: date-time
+        criteria:
+          type: array
+          items:
+            type: string
+        note:
+          type: object
+          $ref: "#/components/schemas/NoteRest"
+        tasks:
+          type: array
+          items:
+            $ref: "#/components/schemas/TaskRest"
+        isAi:
+          type: boolean
+          description: Indique si le service digital est un service d’IA
+        isShared:
+          type: boolean
+          description: Indique si le service digital est un service d’Shared
+        enableDataInconsistency:
+          type: boolean
+          description: The flag to enable data consistency view
+        versionType:
+          type: string
+        description:
+          type: string
+
     DigitalServiceShareRest:
       description: Information of shared Digital Service
       type: object
@@ -670,6 +712,17 @@ components:
         expiryDate:
           type: string
           format: date-time
+
+    InDigitalServiceVersionRest:
+      description: Information of a Digital Service Version
+      type: object
+      properties:
+        dsName:
+          type: string
+        versionName:
+          type: string
+        isAI:
+          type: boolean
 
     DigitalServiceServerImpactRest:
       type: object
